test/library/standard/Sort/errors/sortDomainArray.rect2.good
sortDomainArray.chpl:66: error: isSorted() is not supported on domains
